--- a/TestDemo/WebContent/html/LandingPage.html
+++ b/TestDemo/WebContent/html/LandingPage.html
@@ -1,87 +1,23 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta charset="ISO-8859-1">
-<link rel="stylesheet" href="../css/LandingPage.css" type="text/css"><style>
-<!--
-body
-	{padding:0;
-	margin:0}
-body img
-	{height:100vh}
-header
-	{left:0;
-	top:0;
-	padding:0;
-	margin:0;
-	height:10%;
-	width:auto;
-	border-bottom:6px double white}
-.logo
-	{margin:0;
-	display:block;
-	height:100px;
-	width:100px;
-	color:#fff;
-	font-family:Helvetica;
-	text-decoration:underline;
-	font-size:20px}
-.logo img
-	{padding:0;
-	margin:0;
-	height:100px;
-	width:100px}
-.Title
-	{text-align:center;
-	width:80%;
-	height:60px;
-	font-family:Courier;
-	margin-left:10%;
-	top:-80px;
-	font-size:30px}
-.MenuList
-	{margin-right:40%;
-	margin:0;
-	list-style:none;
-	width:40%;
-	float:right;
-	top:-95px;
-	padding:20px;
-	left:13%}
-.MenuList li
-	{display:inline-block}
-.MenuList li a
-	{margin-right:2px;
-	background:#fff;
-	color:#000;
-	font-size:20px;
-	height:15px;
-	width:auto;
-	padding:1px}
-.categories
-	{height:50px;
-	width:auto;
-	color:#fff;
-	border:1px solid white}
-.menuHeader
-	{padding:0;
-	margin:0}
-.menuHeader li
-	{list-style:none;
-	display:inline-block}
-.optionItem li a
-	{color:#fff;
-	display:none}
--->
-</style>
-</head>
+	<head>
+	      <link rel="stylesheet" href="../css/LandingPage.css" type="text/css">
+	</head>
 <body>
-<div class="logo"><img src="../image/27247864591692cc10.jpg"></div>
-<div class="Title">Max Modesty...</div>
-<div class="MenuItems">
-<ul class="MenuList">
-<li><a href="#">Log In</a> </li><li><a href="#">About Us</a> </li><li><a href="#">Programs Offered</a> </li></ul>
-</div>
+	<header>
+		<div class="logo">
+			<img src="../images/27247864591692cc10.jpg">
+		</div>
+		<div class="Title">Max Modesty...</div>
+		<div class="MenuItems">
+			<ul class="MenuList">
+				<li><a href="#">Log In</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Programs Offered</a></li>
+			</ul>
+		</div>
+	</header>
+		
 <div class="categories">
 <div class="MenuBar">
 <ul class="menuHeader">
