--- a/TestDemo/WebContent/html/LandingPage.html
+++ b/TestDemo/WebContent/html/LandingPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" href="../css/LandingPage.css" type="text/css">
-<title>Insert title here</title>
+<title>MaxModesty...</title>
 <style>
 
  
@@ -17,7 +17,7 @@
 	 <div class="Title">Max Modesty...</div>
 	 <div class="MenuItems">
 	   <ul class="MenuList">
-	   		<li><a href="#">Log In</a></li>	   
+	   		<li><a href="LoginPage.html">Log In</a></li>	   
 	   		<li><a href="#">About Us</a></li>
 	   		<li><a href="#">Programs Offered</a></li>
 	   </ul>
@@ -79,6 +79,37 @@
 </div>
 </div>
 
+<div class="info-box-animated">
+
+<div class="Box box1">
+<p class="box-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
+Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit </p>
+</div>
+<div class="Box box2">
+<p class="box-text">Sed ut perspiciatis unde omnis iste
+ natus error sit voluptatem accusantium doloremque
+  laudantium, totam rem aperiam, eaque ipsa quae ab illo 
+  inventore veritatis et quasi architecto beatae vitae 
+  dicta sunt explicabo. Nemo enim ipsam voluptatem quia 
+  voluptas sit aspernatur aut odit aut fugi</p>
+</div>
+<div class="Box box3">
+<p class="box-text">Sed ut perspiciatis unde omnis iste
+ natus error sit voluptatem accusantium doloremque 
+ laudantium, totam rem aperiam, eaque ipsa quae ab illo
+  inventore veritatis et quasi architecto beatae vitae 
+  dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+   voluptas sit aspernatur aut odit aut fugit, 
+  </p>
+</div>
+</div>
+
+
+<section id="footer">
+    <p>ImaginatorWorks , Copyright &copy; 2018</p>
+    
+    
+    </section>
 
 </body>
 </html>
