Before Presentation All Ui tasks

--- a/TestDemo/WebContent/html/LandingPage.html
+++ b/TestDemo/WebContent/html/LandingPage.html
@@ -12,14 +12,14 @@
 <body >
 
 <header>
-	 <!-- <div class="logo"><p class="line1">Max</p><p class="line2">Modesty</p></div> -->
+	 
      <div class="logo"><img src="../images/27247864591692cc10.jpg"></div>
 	 <div class="Title">Max Modesty...</div>
 	 <div class="MenuItems">
 	   <ul class="MenuList">
 	   		<li><a href="LoginPage.html">Log In</a></li>	   
 	   		<li><a href="#">About Us</a></li>
-	   		<li><a href="#">Programs Offered</a></li>
+	   		<li><a href="ProgramsPage.html">Programs Offered</a></li>
 	   </ul>
 	 </div>	
 	 <div class="DropDownMenu">
@@ -27,7 +27,7 @@
 	  <div>Menu 1
 						
 				<ul class="OptionMenu" >
-					<li><a href="#">Option 1</a></li>
+					<li><a href="DropDownOption1.html">Option 1</a></li>
 					<li><a href="#">Option 1</a></li>
 					<li><a href="#">Option 1</a></li>
 					
