--- a/TestDemo/WebContent/html/LoginPage.html
+++ b/TestDemo/WebContent/html/LoginPage.html
@@ -10,11 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/Loginstyles.css">
 </head>
 <body >
+		<div class="homePageIcon"><a href="LandingPage.html"><img src="../images/home-icon.png"></a></div>
 
 		<div class="login-box" >
 		<img src="../images/loginAvatar.png" class="avatar"/>
 		<h1>Login Here</h1>
-		<form>
+		<form action="register" method="post">
 		
 		<p>UserName</p>
 		<input type="text" name="username" placeholder="Enter UserName">
