--- a/TestDemo/WebContent/html/RegistrerNewUser.html
+++ b/TestDemo/WebContent/html/RegistrerNewUser.html
@@ -12,7 +12,7 @@ body{
 <link rel="stylesheet" type="text/css" href="../css/regForm.css">
 </head>
 <body>
-		
+		<div class="homePageIcon"><a href="LandingPage.html"><img src="../images/home-icon.png"></a></div>
 		<div class="registration-box" >			
 		<form>
 		<h1>Registration Form</h1>
