--- a/TestDemo/WebContent/html/ProgramsPage.html
+++ b/TestDemo/WebContent/html/ProgramsPage.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li class="current"><a href="LandingPage.html">Home</a></li>
-                    <li><a href="AboutUs.html">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="programsPage.html">Programs</a></li>
                 </ul>            
             </nav>
